# bad-haskell-server

./: .gitignore  .server.hs.swp  README.md  bad-haskell-server.cabal  main.hs  request.hs  response.hs  router.hs  server.hs  usage.hs
demo/: Main.hs
src/: Request.hs  Response.hs  Router.hs  Server.hs  Usage.hs
test/: Main.hs
