name:                bad-haskell-server
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.8

executable demo
  main-is:           Usage.hs
  build-depends:     base ==4.5.*
                   , time
                   , containers
                   , regex-posix
                   , split
                   , network
  hs-source-dirs:    src
