name:                bad-haskell-server
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.8

executable demo
  main-is:           Usage.hs
  build-depends:     base
                   , time
                   , containers
                   , regex-posix
                   , split
                   , network
  hs-source-dirs:    src

test-suite spec
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  build-depends:     base
                   , HUnit
  hs-source-dirs:    test, src
