name:                bad-haskell-server
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  build-depends:     base
                   , time
                   , containers
                   , regex-posix
                   , split
                   , network
  exposed-modules:   Request, Response, Router, Server

executable demo
  hs-source-dirs:    demo
  main-is:           Main.hs
  build-depends:     base
                   , bad-haskell-server
                   , time
                   , containers

test-suite spec
  hs-source-dirs:    test
  main-is:           Main.hs
  type:              exitcode-stdio-1.0
  build-depends:     base
                   , bad-haskell-server
                   , HUnit
                   , containers
